Fix bug #340212: incorrect soft-tabs alignment after beginning-of-line

Fix for incorrect soft-tabs alignment after beginning-of-line, by taking the current cursor position into account when expanding tabs to spaces.

This also now uses the indentation width rather than the tab width, as I see "Tab Width" as being the actual width of the \t character, and "Indentation width" as being the next alignment position for virtual indentation.  This more closely matches other editors (e.g. vim) which have similar indentation control.

Patch by Michael Hansen

BUG: 340212
REVIEW: 120760